--- a/views/include/head.jade
+++ b/views/include/head.jade
@@ -3,6 +3,7 @@ head
 	script(type="text/javascript" scr="./public/libs/jquery.min.js")
 	script(type='text/javascript' scr='./public/libs/bootstrap/js/bootstrap.min.js')
 	link(rel="stylesheet",href="./public/libs/bootstrap/bootstrap.min.css")
+	link(rel="stylesheet",href="./public/libs/normalize.css")
 	link(rel="stylesheet",href="./public/css/main.css")
 
 	title #{title}
