--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,7 @@
 doctype html
 html
-  include ./include/head.jade
-  body
-    h1 “你好nodejs”
-  include ./include/footer.jade
+	include ./include/head.jade
+	body
+		include ./include/header.jade
+		div.content
+		include ./include/footer.jade
