--- a/views/include/header.jade
+++ b/views/include/header.jade
@@ -1,6 +1,17 @@
-header
-	nav
-		ul
-			li Home
-			li News
-			li About me
+header.mainHead
+	div.container
+		a(href="#") 
+		nav.mainNav
+			ul
+				li.menu-item
+					a(href="#") Home
+				li.menu-item
+					a(href="#") News
+				li.menu-item
+					a(href="#") About
+		nav.accountNav
+			ul
+				li.menu-item
+					a(href="#") Sign up
+				li.menu-item
+					a(href="#") Sign in
