--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,9 @@ html
 	include ./include/head.jade
 	body
 		include ./include/header.jade
-		div.content
-			section
-		include ./include/footer.jade
+		div#langing
+			div#langing-page
+				div.container
+					div.about-content.absolute-center
+						h1 WE HELP YOU EASILY BUILD
+		//include ./include/footer.jade
