--- a/views/include/header.jade
+++ b/views/include/header.jade
@@ -12,6 +12,6 @@ header.mainHead
 		nav.accountNav
 			ul
 				li.menu-item
-					a(href="#") Sign up
+					a(href="/signup") Sign up
 				li.menu-item
 					a(href="#") Sign in
