完成接受前端请求

--- a/views/include/header.jade
+++ b/views/include/header.jade
@@ -4,7 +4,7 @@ header.mainHead
 		nav.mainNav
 			ul
 				li.menu-item
-					a(href="#") Home
+					a(href="/") Home
 				li.menu-item
 					a(href="#") News
 				li.menu-item
