--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,12 @@
 doctype html
 html
 	include ./include/head.jade
+	script(type='text/javascript').
+		$(function(){
+			alert('a')
+		});
 	body
 		include ./include/header.jade
 		div#langing
 			div#langing-page
 				div.container
-					//div.about-content.absolute-center
-						//h1 WE HELP YOU EASILY BUILD
-		//include ./include/footer.jade
