--- a/views/sign/signup.jade
+++ b/views/sign/signup.jade
@@ -1,10 +1,34 @@
 doctype html
 html
-	include ./include/head.jade
+	include ../include/head.jade
+	script(type='text/javascript').
+		$(function(){
+			alert('a')
+		});
 	body
-		include ./include/header.jade
-		div.row
-			div.span9
-				div.row
-					div.span3 UserName
-					div.span6 input(type="text")
+		include ../include/header.jade
+		div.container
+			div.regist-form
+				div(role="alert" class='alert alert-warning alert-dismissible')
+					button(class='close' data-dismiss="alert" aria-label="Close")
+						span(aria-hidden="true")&times;
+					<strong>Warning!</strong> Better check yourself, you're not looking too good.
+				div.msg
+					h1 nihao
+				form(action='/signup' method='post')
+					div.base-from
+						h4 Register
+						div.form-group
+							input(id='email' name='email' type='text' class='form-control' placeholder="Email")
+
+						div.form-group
+							input(id='userName' name='userName' type='text' class='form-control' placeholder='UserName')
+
+						div.form-group
+							input(id='pass' name='pass' type='password' class='form-control' placeholder='Password')
+
+						div.form-group
+							input(id='verifyPass' name='verifyPass' type='password' class='form-control' placeholder='verify Password')
+
+						div.form-group
+							input(type='submit' class='btn btn-primary btn-block' value='Submit')
