--- a/views/include/head.jade
+++ b/views/include/head.jade
@@ -1,9 +1,8 @@
 head
-	meta(charset = "uft-8")
-	script(type='text/javascript' scr='/public/libs/bootstrap/js/bootstrap.min.js')
-	script(type='text/javascript' scr="/public/javascript/main.js")
 	link(rel="stylesheet",href="/public/libs/bootstrap/css/bootstrap.min.css")
 	link(rel="stylesheet",href="/public/libs/normalize.css")
 	link(rel="stylesheet",href="/public/css/main.css")
-	script(type='text/javascript' scr="/public/libs/jquery.min.js")
-	title #{title}
+	script(scr="/public/jquery.min.js")
+	script(scr='/public/libs/bootstrap/js/bootstrap.min.js')
+	
+
