--- a/views/layout.html
+++ b/views/layout.html
@@ -35,7 +35,7 @@
 						<a href="/signup">Sign up</a>
 					</li>
 					<li class="menu-item">
-						<a href="#">Sign in</a>
+						<a href="/signin">Sign in</a>
 					</li>
 				</ul>
 			</nav>
