--- a/views/sign/signup.html
+++ b/views/sign/signup.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<div class="regist-form">
+	<div class="base-from">
 		<%if (typeof(error) !== 'undefined' && error){%>
 			<div class="alert alert-warning alert-dismissible" role="alert">
 				<button class="close" data-dismiss="alert" aria-label="Close">
@@ -17,13 +17,13 @@
 			</div>
 		<%} else {%>
 			<form action="/signup" method="post">
-				<div class="base-from">
+				
 					<h4>Register</h4>
 					<div class="form-group">
 						<input id='email' name='email' type='text' class='form-control' placeholder="Email" />
 					</div>
 					<div class="form-group">
-						<input id='userName' name='userName' type='text' class='form-control' placeholder='UserName' />
+						<input id='account' name='account' type='text' class='form-control' placeholder='account' />
 					</div>
 					<div class="form-group">
 						<input id='pass' name='pass' type='password' class='form-control' placeholder='Password' />
@@ -34,7 +34,6 @@
 					<div class="form-group">
 						<input type='submit' class='btn btn-primary btn-block' value='Submit'/>
 					</div>
-				</div>
 			</form>
 		<%}%>
 	</div>
