--- a/views/sign/signin.html
+++ b/views/sign/signin.html
@@ -1,9 +1,9 @@
 <div class="container">
-	<form action="/signin" method="post">
-		<div class="base-from">
+	<div class="base-from">
+		<form action="/signin" method="post">
 			<h4>登陆</h4>
 			<div class="form-group">
-				<input id='name' name='name' type='text' class='form-control' placeholder="用户名" />
+				<input id='loginname' name='loginname' type='text' class='form-control' placeholder="用户名" />
 			</div>
 			<div class="form-group">
 				<input id='pass' name='pass' type='password' class='form-control' placeholder="密码" />
@@ -11,6 +11,7 @@
 			<div class="form-group">
 				<input type='submit' class='btn btn-primary btn-block' value='登陆'/>
 			</div>
-		</div>
-	</form>
+		</form>
+	</div>
+	
 </div>
