--- a/views/layout.html
+++ b/views/layout.html
@@ -33,19 +33,20 @@
 			</nav>
 			<nav class="accountNav">
 				<ul>
-					<% if(current_user){%>
+					<% if(typeof(current_user) != 'undefined' && current_user){%>
 					<li class="menu-item">
-						<a href="#">注册</a>
+						<a href="#">已经登陆了</a>
 					</li>
 					<li class="menu-item">
-						<a href="/signin">登陆</a>
+						<a href="/signin">注销</a>
 					</li>
 					<%}else{%>
 					<li class="menu-item">
-						<a href="/signup">注册</a>
+						<a href="/signin">登陆</a>
+						
 					</li>
 					<li class="menu-item">
-						<a href="/signin">登陆</a>
+						<a href="/signup">注册</a>
 					</li>
 					<%}%>
 					
