--- a/views/layout.html
+++ b/views/layout.html
@@ -10,13 +10,15 @@
 	<link rel="stylesheet" type="text/css" href="/public/libs/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/public/libs/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="/public/libs/swiper/css/swiper.min.css">
+	<link rel="stylesheet" type="text/css" href="/public/css/style.css">
 	<link rel="stylesheet" type="text/css" href="/public/css/main.css">
 
 
 	<script type="text/javascript" src="/public/libs/jquery.min.js"></script>
 	<script type="text/javascript" src="/public/libs/bootstrap/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="/public/libs/swiper/js/swiper.min.js"></script>
+	
 
+	
 </head>
 <body>
 	<header class="mainHead">
@@ -70,7 +72,7 @@
 						<nav class="nav-menu">
 							<ul class="menu">
 								<li >
-								<a href="/"><i class="fa fa-home"></i>Home</a>
+									<a href="/"><i class="fa fa-home"></i>Home</a>
 								</li>
 								<li >
 									<a href="#">News</a>
@@ -85,10 +87,8 @@
 			</div>
 		</div>
 
-		
-		<!-- main-navigation-->
 	</header>
-	<div id="main">
+	<div class="main-wrapper">
 		<%- body%>
 	</div>
 </body>
